# comfyui-lmstudio

./: .gitignore  Captioneer.json  README.md  Simple_Workflow.json  __init__.py  lm_studio_nodes.py  pyproject.toml
. Workflows/: Fal_Ideogram_4_Instant_LM_Studio_WF.json  json_converter_system_prompt_(Ideogram_4).md  prompt_expander_system_prompt.md
.github/workflows/: publish.yml
